# personal_workflow_manager

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  WORKSUMMARY.md  example.pwm.toml  package-lock.json  package.json  pyproject.toml
.agents/skills/pwm-workflow/: REFERENCE.md  SKILL.md
pwm/: cli.py
pwm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pwm/ai/: __init__.py  openai_client.py  prompts.py  summarizer.py
pwm/check/: self_check.py
pwm/commands/: init.py
pwm/config/: loader.py  models.py
pwm/context/: command.py  resolver.py  types.py
pwm/github/: client.py
pwm/jira/: client.py
pwm/log/: __init__.py  events.py
pwm/pr/: open.py
pwm/prompt/: command.py
pwm/setup/: init.py
pwm/summary/: __init__.py  business_days.py  collector.py  command.py  formatter.py
pwm/vcs/: git_cli.py  remote_url.py
pwm/work/: create.py  create_issue.py  end.py  epic_history.py  start.py  terminal.py
tests/: conftest.py  test_ai_summarizer.py  test_business_days.py  test_cli.py  test_context.py  test_context_resolver.py  test_create_issue.py  test_debug_diagnostics.py  test_epic_history.py  test_github_client.py  test_github_comments.py  test_github_pr.py  test_issue_create.py  test_jira_client.py  test_log_events.py  test_openai_client.py  test_pr_open.py  test_prompt.py  test_summary_collector.py  test_summary_formatter.py  test_vcs_commits.py  test_vcs_git_cli.py  test_vcs_remote_url.py  test_work_end.py  test_work_start.py  test_work_terminal.py
