[project]
name = "pwm"
version = "0.1.0"
description = "Personal Workflow Manager (Jira/GitHub/Git integrations)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "You" }]

dependencies = [
  "typer[all]>=0.12.0",
  "pydantic>=2.7.0",
  "rich>=13.7.0",
]

[project.scripts]
pwm = "pwm.cli:app"

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
